syntax = "proto3";

package catalog_buf;

message Coordinates {
    double lat = 1;
    double lng = 2;
}

message Stop {
   string stop_name = 1;
   Coordinates point = 2;
}

message Bus {
    string bus_name = 1;
    repeated int32 stop_num = 2;
    bool round_trip = 3;
}

message Distance {
	int32 stop_id_from = 1;
	int32 stop_id_to = 2;
	double distance = 3;
}

message Point {
	double x = 1;
	double y = 2;
}

message Color {
	
}

message RenderSetting {
	double width = 1;
	double height = 2;
	double padding = 3;
    double line_width = 4;
    double stop_radius = 5;
    int32 bus_label_font_size = 6;
    Point bus_label_offset =  7;
    int32 stop_label_font_size = 8;
    Point stop_label_offset = 9;
    Color underlayer_color = 10;
    double underlayer_width = 11;
    repeated Color color_palette = 12;
}

message Catalog {
    repeated Stop stop = 1;
    repeated Bus bus = 2;
    repeated Distance map_distance = 3;
}
